--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header></header>
-    <main id="field"></main>
+    <main id="icons"></main>
 
     <script src="./data.js"></script>
   </body>
