--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         </div>
       </div>
     </header>
-    <main id="icons">
-      <div class="row d-flex"><div class="col-3"></div></div>
+    <main>
+      <div class="container">
+        <div class="row d-flex justify-content-between" id="icons"></div>
+      </div>
     </main>
 
     <script src="./data.js"></script>
