--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-12 justify-content-center">
           <form action="/action_page.php">
-            <label for="difficulty">Filtra per tipo: </label>
+            <label for="filter">Filtra per tipo: </label>
             <select name="filter" id="filter">
               <option value="1">All</option>
               <option value="2">animal</option>
